@@ -1,5 +1,6 @@
 0.11.1
  - ci: update GitHub Actions workflow to use Docker for testing
+ - tests: add 'follow_redirects' to app.get
 0.11.0
  - ref: migrate to dcor_shared.RQJob
 0.10.2
